
noinst_LIBRARIES = libutil.a

# core sources of opensky sensor
libutil_a_SOURCES = cfgfile.h cfgfile.c component.h component.c \
	endec.h log.h log_stdio.c net_common.h net_common.c proc.h proc.c \
	statistics.h statistics.c threads.h util.h util.c serial_eth.h serial_eth.c

AM_CFLAGS = -I$(top_srcdir)/src
